マルチバイト文字の暗号化・復号化に対応